<resources>
    <string name="app_name">BUtiful Schedule</string>
    <string name="title_activity_saved_schedules">Saved Schedules</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_selected_classes">Selected Classes</string>
    <string name="introductory">Please enter the following</string>
    <string name="semester">Semester</string>
    <string name="college">College</string>
    <string name="department">Department</string>
    <string name="hints">Spring2020</string>
    <string name="course">Course code</string>
    <string name="course1">Course 1:</string>
    <string name="course2">Course 2:</string>
    <string name="course3">Course 3:</string>
    <string name="course4">Course 4:</string>
    <string name="course5">Course 5:</string>
    <string name="buttonI">Input course choices</string>
    <string name="introductoryRC">Please rank your courses from top to last choice</string>
    <string name="choice1">Top choice:</string>
    <string name="choice2">Second choice:</string>
    <string name="choice3">Third choice:</string>
    <string name="choice4">Fourth choice:</string>
    <string name="choice5">Last choice:</string>
    <string name="buttonRC">Input course rankings</string>
    <string name="introductoryPMM">Please edit your preferences for each chosen course:</string>
    <string name="getschedule">Get optimized schedules!</string>
    <string name="display">Test Display</string>
    <string name="introductoryCP">Please choose your preferences in the following categories</string>
    <string name="section">Section number</string>
    <string name="times">Start to stop times</string>
    <string name="days">Day and time of class</string>
    <string name="prof">Professor</string>
    <string name="type">Course type</string>
    <string name="TorP">Which matters more to you?</string>
    <string name="buttonCP">Input course preferences</string>
    <string-array name="testSpinArray">
        <item>Select a course</item>
        <item>Course 1</item>
        <item>Course 2</item>
        <item>Course 3</item>
        <item>Course 4</item>
        <item>Course 5</item>
    </string-array>
    <string name="noSelection">No selection</string>
    <string name="title_activity_rank_courses">RankCourses</string>
    <string name="title_activity_preferences_main_menu">PreferencesMainMenu</string>
    <string name="title_activity_schedule_display">ScheduleDisplay</string>
    <string name="title_activity_course1_preferences">Course1Preferences</string>
    <string name="select">Please select a choice</string>
    <string name="time7am">7:00 am</string>
    <string name="time8am">8:00 am</string>
    <string name="time9am">9:00 am</string>
    <string name="time10am">10:00 am</string>
    <string name="time11am">11:00 am</string>
    <string name="time12pm">12:00 am</string>
    <string name="time1pm">1:00 pm</string>
    <string name="time2pm">2:00 pm</string>
    <string name="time3pm">3:00 pm</string>
    <string name="time4pm">4:00 pm</string>
    <string name="time5pm">5:00 pm</string>
    <string name="time6pm">6:00 pm</string>
    <string name="time7pm">7:00 pm</string>
    <string name="time8pm">8:00 pm</string>
    <string name="time9pm">9:00 pm</string>
    <string name="time10pm">10:00 pm</string>
    <string name="time11pm">11:00 pm</string>
    <string name="C1">492</string>
    <string name="C2">381</string>
    <string name="C3">327</string>
    <string name="C4">330</string>
    <string name="C5">307</string>
    <string name="D1">BE</string>
    <string name="D2">EK</string>
    <string name="D3">EC</string>
    <string name="D4">EC</string>
    <string name="D5">EK</string>

</resources>
