<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Information"
    tools:showIn="@layout/activity_information">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:text="@string/introductory"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editSemester"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/semester"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"/>

    <EditText
        android:id="@+id/editCollege"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/college"
        app:layout_constraintTop_toBottomOf="@+id/editSemester"/>

    <EditText
        android:id="@+id/editDepartment"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/department"
        app:layout_constraintTop_toBottomOf="@+id/editCollege"/>

    <EditText
        android:id="@+id/editCourse"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/course"
        app:layout_constraintTop_toBottomOf="@+id/editDepartment"/>

    <EditText
        android:id="@+id/editSection"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/section"
        app:layout_constraintTop_toBottomOf="@+id/editCourse"/>

    <EditText
        android:id="@+id/editStart"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/start"
        app:layout_constraintTop_toBottomOf="@+id/editSection"/>

    <EditText
        android:id="@+id/editStop"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/stop"
        app:layout_constraintTop_toBottomOf="@+id/editStart"/>

    <EditText
        android:id="@+id/editDays"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/days"
        app:layout_constraintTop_toBottomOf="@+id/editStop"/>

    <EditText
        android:id="@+id/editProf"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/prof"
        app:layout_constraintTop_toBottomOf="@+id/editDays"/>

    <EditText
        android:id="@+id/editType"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/type"
        app:layout_constraintTop_toBottomOf="@+id/editProf"/>

    <Spinner
        android:id="@+id/TestSpinner"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:dropDownWidth="match_parent"
        android:spinnerMode="dropdown"
        android:prompt="@string/TorP"
        app:layout_constraintTop_toBottomOf="@+id/editType" />




</androidx.constraintlayout.widget.ConstraintLayout>