<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".RankCourses"
    tools:showIn="@layout/activity_rank_courses">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/introductoryRC"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:text="@string/choice1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView" />

    <Spinner
        android:id="@+id/CourseChoice1"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:dropDownWidth="match_parent"
        android:spinnerMode="dropdown"
        app:layout_constraintTop_toBottomOf="@id/textView1" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:text="@string/choice2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/CourseChoice1" />

    <Spinner
        android:id="@+id/CourseChoice2"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:dropDownWidth="match_parent"
        android:spinnerMode="dropdown"
        app:layout_constraintTop_toBottomOf="@id/textView2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:text="@string/choice3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/CourseChoice2" />

    <Spinner
        android:id="@+id/CourseChoice3"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:dropDownWidth="match_parent"
        android:spinnerMode="dropdown"
        app:layout_constraintTop_toBottomOf="@id/textView3" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:text="@string/choice4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/CourseChoice3" />

    <Spinner
        android:id="@+id/CourseChoice4"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:dropDownWidth="match_parent"
        android:spinnerMode="dropdown"
        app:layout_constraintTop_toBottomOf="@id/textView4" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:text="@string/choice5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/CourseChoice4" />

    <Spinner
        android:id="@+id/CourseChoice5"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:dropDownWidth="match_parent"
        android:spinnerMode="dropdown"
        app:layout_constraintTop_toBottomOf="@id/textView5" />

    <Button
        android:id="@+id/enterRankings"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:text="@string/buttonRC"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/CourseChoice5" />


</androidx.constraintlayout.widget.ConstraintLayout>