<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Course1Preferences"
    tools:showIn="@layout/activity_course1_preferences"
    android:background="@color/background">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/introductoryCP" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toBottomOf="@id/textView"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/prof" />

    <TextView
        android:id="@+id/textView1a"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toBottomOf="@id/textView1"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/choice1" />

    <TextView
        android:id="@+id/textView1b"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toBottomOf="@id/textView1"
        app:layout_constraintLeft_toRightOf="@id/textView1a"
        android:text="@string/choice2" />

    <Spinner
        android:id="@+id/SpinProf1"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:dropDownWidth="150dp"
        android:spinnerMode="dropdown"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView1a"/>

    <Spinner
        android:id="@+id/SpinProf2"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:dropDownWidth="150dp"
        android:spinnerMode="dropdown"
        app:layout_constraintLeft_toRightOf="@id/SpinProf1"
        app:layout_constraintTop_toBottomOf="@+id/textView1a"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toBottomOf="@id/SpinProf1"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/prof" />

    <TextView
        android:id="@+id/textView2a"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toBottomOf="@id/textView2"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/choice1" />

    <TextView
        android:id="@+id/textView2b"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toBottomOf="@id/textView2"
        app:layout_constraintLeft_toRightOf="@id/textView2a"
        android:text="@string/choice2" />

    <Spinner
        android:id="@+id/SpinDays1"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:dropDownWidth="150dp"
        android:spinnerMode="dropdown"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2a"/>

    <Spinner
        android:id="@+id/SpinDays2"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:dropDownWidth="150dp"
        android:spinnerMode="dropdown"
        app:layout_constraintLeft_toRightOf="@id/SpinDays1"
        app:layout_constraintTop_toBottomOf="@+id/textView2a"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toBottomOf="@id/SpinDays1"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/times" />

    <TextView
        android:id="@+id/textView3a"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toBottomOf="@id/textView3"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/choice1" />

    <TextView
        android:id="@+id/textView3b"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toBottomOf="@id/textView3"
        app:layout_constraintLeft_toRightOf="@id/textView3a"
        android:text="@string/choice2" />

    <TextView
        android:id="@+id/textView3c"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toBottomOf="@id/textView3"
        app:layout_constraintLeft_toRightOf="@id/textView3b"
        android:text="@string/choice3" />

    <Spinner
        android:id="@+id/SpinTime1"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:dropDownWidth="150dp"
        android:spinnerMode="dropdown"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3a"/>

    <Spinner
        android:id="@+id/SpinTime2"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:dropDownWidth="150dp"
        android:spinnerMode="dropdown"
        app:layout_constraintLeft_toRightOf="@id/SpinTime1"
        app:layout_constraintTop_toBottomOf="@+id/textView3a"/>

    <Spinner
        android:id="@+id/SpinTime3"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:dropDownWidth="150dp"
        android:spinnerMode="dropdown"
        app:layout_constraintLeft_toRightOf="@id/SpinTime2"
        app:layout_constraintTop_toBottomOf="@+id/textView3a"/>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toBottomOf="@id/SpinTime1"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/TorP" />

    <Spinner
        android:id="@+id/SpinPT"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:dropDownWidth="150dp"
        android:spinnerMode="dropdown"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"/>

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="32dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/SpinPT"
        android:text="@string/buttonCP"
        android:textSize="25dp"
        android:textAllCaps="false"
        android:background="@drawable/button_style"
        android:textColor="#ffffff"
        android:fontFamily="@font/alegreya_family"/>


</androidx.constraintlayout.widget.ConstraintLayout>